<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>archi.quest</groupId>
	<artifactId>synergy</artifactId>
	<version>1.4.0</version>
	<name>Synergy</name>
	<description>Basic tools and server messaging plugin</description>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub mrbear22 Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/mrbear22/Synergy</url>
		</repository>
	</distributionManagement>
	<build>
		<finalName>Synergy</finalName>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<filtering>true</filtering>
				<directory>${basedir}/src/main/resources</directory>
				<includes>
					<include>plugin.yml</include>
					<include>bungee.yml</include>
					<include>config.yml</include>
					<include>locales.yml</include>
					<include>steve.png</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
			        <minimizeJar>true</minimizeJar>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
	        <plugin>
	            <artifactId>maven-resources-plugin</artifactId>
	            <version>3.3.1</version>
	            <executions>
	                <execution>
	                    <id>filter-resources</id>
	                    <phase>process-resources</phase>
	                    <goals>
	                        <goal>resources</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/repository/public/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>jitpack</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>essentials-releases</id>
			<url>https://repo.essentialsx.net/releases/</url>
		</repository>
		<repository>
			<id>enginehub-repo</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
		</repository>
		<repository>
			<id>bungeecord-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.sun.net.httpserver</groupId>
			<artifactId>http</artifactId>
			<version>20070405</version>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.20.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.velocitypowered</groupId>
			<artifactId>velocity-api</artifactId>
			<version>3.3.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>5.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>5.0.0-beta.20</version>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.theokanning.openai-gpt3-java</groupId>
			<artifactId>service</artifactId>
			<version>0.18.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.NuVotifier</groupId>
			<artifactId>NuVotifier</artifactId>
			<version>2.7.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.essentialsx</groupId>
			<artifactId>EssentialsX</artifactId>
			<version>2.20.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>fr.xephi</groupId>
			<artifactId>authme</artifactId>
			<version>5.6.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.intellectualsites.plotsquared</groupId>
			<artifactId>plotsquared-bukkit</artifactId>
			<version>7.3.7</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.intellectualsites.plotsquared</groupId>
			<artifactId>plotsquared-core</artifactId>
			<version>7.3.7</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.18.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.TownyAdvanced</groupId>
			<artifactId>Towny</artifactId>
			<version>0.99.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-api</artifactId>
			<version>1.17-R0.1-SNAPSHOT</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-api</artifactId>
			<version>1.19-R0.1-SNAPSHOT</version>
			<type>javadoc</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>com.github.SaberLLC</groupId>
		    <artifactId>Saber-Factions</artifactId>
		    <version>4.1.4-STABLE</version>
			<scope>provided</scope>
		</dependency>
	    <dependency>
	        <groupId>net.skinsrestorer</groupId>
	        <artifactId>skinsrestorer-api</artifactId>
	        <version>15.0.3</version>
	        <scope>provided</scope>
	    </dependency>
		<dependency>
		    <groupId>com.github.plan-player-analytics</groupId>
		    <artifactId>Plan</artifactId>
		    <version>5.6.2883</version>
		    <scope>provided</scope>
		</dependency>
	</dependencies>
</project>